add connection pool(hikaricp)&update repository structure